# point-api

./: .env  100.out.txt  1000.out.txt  1500.out.txt  400.out.txt  Cargo.toml  CreateTable.sql  README.md  point.sql  point.sqlite  post  update-balance
.github/workflows/: rust.yml
.sqlx/: query-1bdcbdc3d3f1b654c2bf476d992e8e5f4e1b330d13c2c02f33b4c88f4a11006d.json  query-c63adf95f5e39e63c3938bdd5cc613f687a551c3067d8fbe89e140b8ebf2c73e.json
src/: main.rs  model.rs  route.rs  schema.rs
