[package]
name = "point-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
email_address = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.0", features = ["runtime-async-std", "tls-native-tls", "sqlite"] }
